--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">KolosovFintech</string>
+    <string name="app_name">Developers Life</string>
     <string name="loading_text_view">Загрузка…</string>
     <string name="reboot_button_text">Повторить</string>
     <string name="menu_title_random">Рандомный</string>
